--- a/package.json
+++ b/package.json
@@ -1,9 +1,31 @@
 {
   "name": "react-dev-inspector-enhanced",
-  "type": "module",
-  "version": "0.0.0",
+  "version": "1.0.0",
+  "description": "dev-tool for inspect react components and jump to local IDE for component code.",
+  "workspaces": [
+    "examples/*"
+  ],
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org"
+  },
+  "keywords": [
+    "react",
+    "component",
+    "inspector"
+  ],
+  "files": [
+    "README.md",
+    ".npmrc",
+    "scripts",
+    "src",
+    "es",
+    "lib",
+    "plugins"
+  ],
+  "engines": {
+    "node": ">=12.0.0"
+  },
   "packageManager": "pnpm@7.2.1",
-  "description": "",
   "author": "hjiog",
   "license": "MIT",
   "homepage": "https://github.com/hjiog/react-dev-inspector-enhanced#readme",
@@ -12,32 +34,21 @@
     "url": "git+https://github.com/hjiog/react-dev-inspector-enhanced.git"
   },
   "bugs": "https://github.com/hjiog/react-dev-inspector-enhanced/issues",
-  "keywords": [],
   "sideEffects": false,
-  "exports": {
-    ".": {
-      "types": "./dist/index.d.ts",
-      "require": "./dist/index.cjs",
-      "import": "./dist/index.mjs"
-    }
-  },
-  "main": "./dist/index.mjs",
-  "module": "./dist/index.mjs",
-  "types": "./dist/index.d.ts",
+  "main": "lib/index.js",
+  "module": "es/index.mjs",
+  "types": "es/index.d.ts",
   "typesVersions": {
     "*": {
       "*": [
-        "./dist/*",
-        "./dist/index.d.ts"
+        "./es/*",
+        "./es/index.d.ts"
       ]
     }
   },
-  "files": [
-    "dist"
-  ],
   "scripts": {
-    "build": "unbuild",
-    "dev": "unbuild --stub",
+    "build": "tsup",
+    "dev": "tsup --stub",
     "lint": "eslint .",
     "prepublishOnly": "nr build",
     "release": "bumpp && npm publish",
@@ -45,19 +56,66 @@
     "test": "vitest",
     "typecheck": "tsc --noEmit"
   },
+  "dependencies": {
+    "@babel/core": "^7.11.6",
+    "@babel/generator": "^7.11.6",
+    "@babel/parser": "^7.11.5",
+    "@babel/traverse": "^7.11.5",
+    "@babel/types": "^7.17.0",
+    "hotkeys-js": "^3.8.1",
+    "loader-utils": "^2.0.0",
+    "querystring": "^0.2.1",
+    "react-dev-utils": "^12.0.1"
+  },
   "devDependencies": {
-    "@hjiog/react-dev-inspector-enhancedonfig": "^0.25.2",
+    "@antfu/eslint-config": "^0.25.2",
     "@antfu/ni": "^0.16.3",
     "@antfu/utils": "^0.5.2",
+    "@commitlint/cli": "16.2.3",
+    "@commitlint/config-conventional": "16.2.1",
+    "@swc/core": "^1.2.218",
+    "@types/babel__traverse": "7.17.0",
+    "@types/connect": "3.4.35",
+    "@types/express": "4.17.13",
+    "@types/fs-extra": "9.0.13",
     "@types/node": "^18.0.3",
+    "@types/react": "17.0.44",
+    "@types/react-dev-utils": "^9.0.11",
+    "@types/react-reconciler": "0.26.6",
+    "@types/webpack": "4.41.32",
+    "@types/webpack-dev-server": "3.11.6",
+    "@typescript-eslint/eslint-plugin": "4.33.0",
+    "@typescript-eslint/parser": "4.33.0",
+    "@umijs/types": "3.5.23",
+    "babel-plugin-tester": "10.1.0",
+    "babel-preset-react-app": "10.0.1",
     "bumpp": "^8.2.1",
     "eslint": "^8.19.0",
+    "eslint-config-alloy": "3.10.0",
+    "eslint-plugin-import": "2.26.0",
+    "eslint-plugin-react": "7.29.4",
+    "eslint-plugin-react-hooks": "4.4.0",
+    "eslint-plugin-typescript": "0.14.0",
     "esno": "^0.16.3",
-    "pnpm": "^7.5.0",
+    "fs-extra": "10.1.0",
+    "globby": "11.1.0",
+    "husky": "4.3.8",
+    "jest": "27.5.1",
+    "lint-staged": "12.4.0",
+    "nodemon": "2.0.15",
+    "npm-run-all": "4.1.5",
+    "react": "^17.0.0",
     "rimraf": "^3.0.2",
+    "ts-jest": "27.1.4",
+    "ts-node": "10.7.0",
+    "tsup": "^6.1.3",
     "typescript": "^4.7.4",
-    "unbuild": "^0.7.4",
     "vite": "^2.9.14",
-    "vitest": "^0.18.0"
+    "vitest": "^0.18.0",
+    "webpack": "4.46.0",
+    "webpack-chain": "6.5.1"
+  },
+  "peerDependencies": {
+    "react": ">=16.8.0"
   }
 }
