--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "@babel/types": "^7.17.0",
     "hotkeys-js": "^3.8.1",
     "loader-utils": "^2.0.0",
+    "picocolors": "^1.0.0",
     "querystring": "^0.2.1",
     "react-dev-utils": "^12.0.1"
   },
